--- a/Pages/Hero.html
+++ b/Pages/Hero.html
@@ -9,6 +9,7 @@
         -webkit-user-select: none;
         user-select: none;
         scroll-behavior: smooth;
+        -webkit-user-drag: none;
       }
       html {
         font-size: 62.5%;
@@ -163,7 +164,6 @@
       .main {
         width: 100vw;
         height: fit-content;
-        border-top: 3px solid #000;
         display: flex;
         justify-content: center;
         width: 100%;
@@ -204,6 +204,12 @@
         scroll-snap-align: center; /* Add this line */
         border-bottom: 0.1px solid rgb(151, 151, 151);
         box-shadow: inset 0 -30px 30px #9b9b9b;
+
+        scale: .8;
+        opacity: 0;
+        animation: fade-in linear forwards;
+        animation-timeline: view();
+        animation-range: entry 200px;
       }
       .coupon::-webkit-scrollbar {
         width: 7px;
@@ -219,12 +225,23 @@
       .footer {
         width: 100vw;
         height: fit-content;
-        padding-top: 0.4rem;
-        padding-bottom: 5rem;
+        padding: 1rem;
         background: #000;
         margin-top: 2px solid #fff;
-        box-shadow: 0px 0px 0px #fff,inset 0px -10px 30px  #d2d2d2;
+        box-shadow: 0px 0px 0px #fff, 2px -10px 30px #d2d2d2;
+
+        scale: .8;
+        opacity: 0;
+        animation: fade-in linear forwards;
+        animation-timeline: view();
+        animation-range: entry 200px;
       }
+      @keyframes fade-in{
+        to{
+          scale: 1;opacity: 1;
+        }
+      }
+
       h1 {
         font-size: 8rem;
         font-weight: 600;
@@ -246,6 +263,23 @@
         font-size: 1.7rem;
         text-align: center;
         margin-bottom: -1rem;
+      }
+      .scroll-watcher {
+        height: 5px;
+        position: fixed;
+        top: 0;
+        z-index: 1000;
+        background-color: blue;
+        width: 100%;
+        scale: 0 1;
+        transform-origin: left;
+        animation: scroll-watcher linear;
+        animation-timeline: scroll();
+      }
+      @keyframes scroll-watcher {
+        to {
+          scale: 1 1;
+        }
       }
     </style>
     <script>
@@ -270,6 +304,7 @@
     </script>
   </head>
   <body>
+    <div class="scroll-watcher"></div>
     <div class="Container">
       <div class="head">
         <video class="vid" autoplay muted loop>
@@ -320,7 +355,7 @@
         <p>&copy; 2024 Coupon Hostor. All rights reserved.</p>
         <p>
           For support, contact:
-          <span onclick="scrollToSupport()">View support</span>
+          <span onclick="scrollToSupport()" style="color: blue;">View support</span>
         </p>
         <p>400614 Navi Mumbai, India</p>
       </div>
