--- a/Pages/Shop.html
+++ b/Pages/Shop.html
@@ -1,68 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coupon Hostor</title>
     <style>
-        * {
-            -webkit-user-select: none;
-            user-select: none;
-        }
+      * {
+        -webkit-user-select: none;
+        user-select: none;
+        font-family: sans-serif;
+      }
 
-        body {
-            margin: 0px 0px;
-            font-family: sans-serif;
-            background: #000;
-        }
+      body {
+        margin: 0px 0px;
+        font-family: sans-serif;
+        background: #000;
+        overflow: hidden;
+      }
 
-        h1 {
-            font-size: 8rem;
-            font-weight: 600;
-            text-align: center;
-            background: linear-gradient(to right, rgb(209, 0, 216), rgb(206, 11, 40));
-            color: transparent;
-            -webkit-background-clip: text;
-            background-clip: text;
-            text-shadow: 0 0 60px rgba(236, 34, 175, 0.736);
-            animation: anime 1s infinite alternate;
-            text-decoration: underline;
-        }
+      h1 {
+        font-size: 8rem;
+        font-weight: 600;
+        text-align: center;
+        background: linear-gradient(
+          to right,
+          rgb(209, 0, 216),
+          rgb(206, 11, 40)
+        );
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        text-shadow: 0 0 60px rgba(236, 34, 175, 0.736);
+        animation: anime 1s infinite alternate;
+        text-decoration: underline;
+        position: relative;
+        bottom: 80px;
+        padding-bottom: 0.1rem;
+      }
 
-        @keyframes anime {
-            100% {
-                text-shadow: 0 0 60px rgba(255, 40, 94, 0.775);
-
-            }
+      @keyframes anime {
+        100% {
+          text-shadow: 0 0 60px rgba(255, 40, 94, 0.775);
         }
+      }
 
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
 
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-            box-shadow: inset 2px 3px gray;
-        }
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        box-shadow: inset 2px 3px gray;
+      }
 
-        ::-webkit-scrollbar-thumb {
-            background: linear-gradient(red, blue, rgb(78, 255, 78));
-            border-radius: 0.4rem;
-            height: 1rem;
-        }
+      ::-webkit-scrollbar-thumb {
+        background: linear-gradient(red, blue, rgb(78, 255, 78));
+        border-radius: 0.4rem;
+        height: 1rem;
+      }
+      .logout {
+        padding: 0.7rem 2rem;
+        background: red;
+        font-weight: 800;
+        color: white;
+        border-radius: 0.7rem;
+        border: 2px solid rgb(255, 37, 37);
+        transition: all 0.3s ease-in-out;
+        z-index: 1000;
+        scale: 1;
+        position: absolute;
+        top: 5rem;
+        right: 3rem;
+      }
 
-        img {
-            object-position: center;
-        }
+      .logout:hover {
+        scale: 1.1; /* Scale up on hover */
+        background: rgb(255, 51, 51);
+      }
+      .logout:active {
+        background: #85005f;
+      }
+      .Container {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+        top: -10rem;
+        border-top: 2px solid white;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 2rem;
+        margin-top: 5rem;
+      }
+      .head {
+        width: 100vw;
+        height: fit-content;
+      }
+      .right {
+        border-left: 2px solid white;
+        display: flex;
+        flex-direction: column;
+      }
+      .devopts {
+        display: flex;
+        justify-content: flex-end;
+      }
+      .devopts ul li {
+        color: white;
+      }
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 2rem 6rem;
+        display: flex;
+        justify-content: flex-end;
+      }
+      ul li {
+        background:lime;
+        width: 70px;
+        text-align: center;
+        padding: 9px 20px;
+        color: #ffffff;
+        border-radius: 0.7rem;
+        cursor: pointer;
+        font-size: 1.5rem;
+        font-weight: bold;
+        position: relative;
+        left: 2.5rem;
+        transition: all .3s ease-in-out;
+        border: 2px solid rgb(5, 173, 5);
+      }
+      ul li:hover{
+        background-color: rgb(40, 253, 40);
+        scale:1.1;
+      }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            if (!JSON.parse(localStorage.getItem("User")))
+                window.location.href = "Login.html";
+        });
+        function handleLogout() {
+            localStorage.removeItem("User");
+            window.location.href = "Login.html";
+        }
+        function handleaddCoupon() {
+
+        }
+    </script>
 </head>
 
 <body>
+    <div class="head">
     <h1>Shop</h1>
-    <div class="image">
-        <img src="./robot.gif" alt="Robot">
+    <button class="logout" onclick="handleLogout()">Logout</button>
+    </div>
+    <div class="Container">
+        <div class="left"></div>
+        <div class="right">
+            <div class="devopts">
+                <ul>
+                    <li onclick="handleaddCoupon()">+</li>
+                </ul>
+            </div>
+            <div class="coupons"></div>
+        </div>
     </div>
 </body>
-
 </html>
