--- a/Pages/Hero.html
+++ b/Pages/Hero.html
@@ -198,6 +198,7 @@
         gap: 4rem;
         flex-direction: column;
         overflow-x: hidden;
+        overflow-y: scroll;
         padding: 7rem 4rem;
         margin-bottom: 2rem;
         scroll-snap-type: y mandatory;
@@ -242,7 +243,7 @@
         }
       }
 
-      h1 {
+      .footer h1 {
         font-size: 8rem;
         font-weight: 600;
         text-align: center;
@@ -258,7 +259,7 @@
           text-shadow: 0 0 60px rgba(0, 38, 255, 0.658);
         }
       }
-      p {
+      .footer p {
         color: white;
         font-size: 1.7rem;
         text-align: center;
