--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -182,6 +182,8 @@
         //if username.length < 5 return false and call showToast("Username must be greater than 5 letters", 3000);
         //if password !== confirmpassword return false and call       showToast("Password and ConfirmPassword are not same", 3000);
         // return true  __for test purpose__also  return if everything works in function
+        // showToast("Some error!", 10000)
+        // return false;
       }
       const wheight = window.innerHeight;
       const wwidth = window.innerWidth;
